# mlx_finetune_demo

./: .gitignore  README.md  eval_Qwen3-Coder-30B-A3B-Instruct-6bit-DWQ-lr3e-7_0.4.9_mmlu_pro_computer_science  eval_Qwen3-Coder-30B-A3B-Instruct-6bit-DWQ-lr9e-8_0.4.9_mmlu_pro_computer_science  eval_Qwen3-Coder-30B-A3B-Instruct-8bit-DWQ-lr1e-6_0.4.9_mmlu_pro_computer_science  eval_Qwen3-Coder-30B-A3B-Instruct-8bit-DWQ-lr2e7_0.4.9_mmlu_pro_computer_science  eval_Qwen3-Coder-30B-A3B-Instruct-8bit-DWQ-lr4e7_0.4.9_mmlu_pro_computer_science  eval_Qwen3-Coder-30B-A3B-Instruct-8bit-DWQ-lr5e-8_0.4.9_mmlu_pro_computer_science  eval_mlx-community_Qwen3-30B-A3B-Thinking-2507-bf16_0.4.9_mmlu_pro_computer_science  eval_mlx-community_Qwen3-Coder-30B-A3B-Instruct-bf16_0.4.9_mmlu_pro_computer_science  init_push_new_repo.sh  main.py  old_pyproj.txt  project_setup.sh  pyproject.toml  split_pdf_pages.py
CONVERT/: conversion_recipies.md  convert_many.sh  convert_many2.sh  convert_qwen_coder.sh  convert_qwen_coder2.sh  convert_qwen_coder3.sh  eval_Qwen3-30B-A3B-Instruct-2507-6bit-DWQ-lr3e-7_0.4.9_mmlu_pro_computer_science  eval_Qwen3-30B-A3B-Instruct-2507-6bit-DWQ-lr5e-8_0.4.9_mmlu_pro_computer_science  eval_Qwen3-30B-A3B-Instruct-2507-6bit-DWQ-lr8e-8_0.4.9_mmlu_pro_computer_science  eval_many.sh  eval_many2.sh  eval_many3.sh  eval_many_2a.md  eval_many_4.sh  results.md
mlx-quantization/: CHANGELOG.md  CLAUDE.md  LICENSE  README.md  awq_quantization.ipynb  dwq_quantization.ipynb  dynamic_quantization.ipynb  eval_mlx-community_GLM-4.5-Air-5bit_0.4.9_mmlu_pro_computer_science  requirements.txt  universal_mlx_converter.ipynb
(+4 files in other folders)
