[project]
name = "mlx-finetune-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mlx>=0.26.2",
    "mlx-lm>=0.25.3",
    "datasets",
    "transformers",
    "huggingface_hub",
    "ipykernel",
    "jupyter",
    "ipywidgets",
    "torch"
]
