[project]
name = "mlx-finetune-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    #"mlx @ git+https://github.com/ml-explore/mlx",
    "mlx-lm @ git+https://github.com/ml-explore/mlx-lm.git",
    "mlx",
    #"mlx-lm",
    "datasets",
    "transformers",
    "huggingface_hub",
    "ipykernel",
    "jupyter",
    "ipywidgets",
    "torch",
    "lm_eval",
    "datasets",
    "accelerate",
    "sentencepiece",
    "protobuf",
    "evaluate"
]
