[project]
name = "mlx-finetune-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    #"mlx @ git+https://github.com/ml-explore/mlx",
    "mlx-lm @ git+https://github.com/ml-explore/mlx-lm.git",
    "mlx",
    "mlx-vlm",
    #"mlx-lm",
    "datasets",
    "transformers",
    "huggingface_hub",
    "ipykernel",
    "jupyter",
    "ipywidgets",
    "torch",
    "torchvision",
    "lm_eval",
    "datasets",
    "accelerate",
    "sentencepiece",
    "protobuf",
    "evaluate",
    "hf_transfer",
    "gradio",
    "pymupdf",
    "pdf2image",
]
